# shared-gitops-k8s-cluster

./: .gitignore  .sops.yaml  AGENTS.md  README.md  day0.justfile  justfile
.agent/memory-bank/: activeContext.md  progress.md
.firecrawl/: fluvio-helm.md  pact-helm.md
ansible/: ansible.cfg
ansible/inventory/: hosts.yml
ansible/playbooks/: ms02_cluster_edge.yml
config/: cluster.env  dev-dns.yaml  lan-exposure.yaml  lan-http-vhosts.yaml  loadbalancer-ips.env  tilt-cluster.env
deploy/: cluster-start.sh  cluster-stop.sh  microscaler-lan-proxy.service  tilt-preflight.sh
deployment-configuration/: README.md
deployment-profiles/: README.md
docs/: agent-memory-bank-observability.md  day0-host-edge-ansible.md  design.md  edge-envoy-vs-metallb.md  gha-arc.md  helm-stack-status.md  observability-opensearch.md  postgres-backup.md  postgres-pvc-reuse.md  product-image-automation.md  remote-tilt-workflow.md  secrets-audit.md  storage-csi-zfs.md
multipass/: cloud-init-k3s-agent.yaml  cloud-init-k3s-runner.yaml  cloud-init-k3s-server.yaml
tooling/: generate_observability_dashboards.py  pyproject.toml
tooling/src/shared_gitops/: __init__.py  check_metallb_inventory.py  postgres_restore_drill.py  render_cluster_stacks.py  validate_inventory.py
tooling/tests/: test_observability_dashboards.py  test_observability_provisioner.py
tools/: configure_dev_dns.py  configure_docker_registry.py  configure_lan_proxy.py  lan_firewall.py  patch_loadbalancer_services.py  render_cloud_init.py  retarget_shared_k8s_paths.py  sync_haproxy_tls.py  test_configure_lan_proxy.py
(+284 files in other folders)
